--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <main class="conteinerCalculadora">
+       <div class="conteinerItens">
         <div class="conteinerViso">
             <input type="text" name="" id="visor" disabled>
         </div>
@@ -37,6 +38,7 @@
                 <button class="btn" id="n=">=</button>
             </div>
         </div>
+       </div>
     </main>
 </body>
 </html>
