add script and more functions

--- a/index.html
+++ b/index.html
@@ -40,5 +40,13 @@
         </div>
        </div>
     </main>
+    <main class="conteinerList">
+        <div class="conteinerItenList">
+            <ul class="list">
+                <li>teste</li>
+                <li>teste2</li>
+            </ul>
+        </div>
+    </main>
 </body>
 </html>
