add event t buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <main class="conteinerCalculadora">
        <div class="conteinerItens">
         <div class="conteinerViso">
-            <input type="text" name="" id="visor" disabled>
+            <input type="text" name="" id="visor"  >
+            <p id="p"></p>
         </div>
         <div class="conteinerbtn">
             <div class="btngrupo1">
@@ -32,7 +33,7 @@
                 <button class="btn" id="n-">-</button>
             </div>
             <div class="btngrupo3">
-                <button class="btn" id="n0">0</button>
+                <button class="btn" id="n0" data-meu-valo="0">0</button>
                 <button class="btn" id="n.">.</button>
                 <button class="btn" id="n+">+</button>
                 <button class="btn" id="n=">=</button>
@@ -48,5 +49,9 @@
             </ul>
         </div>
     </main>
+  
+    <script src="./script/index.js" ></script>
+   
+  
 </body>
 </html>
