--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main class="conteinerCalculadora">
        <div class="conteinerItens">
         <div class="conteinerViso">
-            <input type="text" name="" id="visor"  >
+            <input type="text" name="" id="visor" disabled >
             <p id="p"></p>
         </div>
         <div class="conteinerbtn">
