--- a/index.html
+++ b/index.html
@@ -33,17 +33,18 @@
                 <button class="btn" id="n-">-</button>
             </div>
             <div class="btngrupo3">
-                <button class="btn" id="n0" data-meu-valo="0">0</button>
+                <button class="btn" id="n0">0</button>
                 <button class="btn" id="n.">.</button>
                 <button class="btn" id="n+">+</button>
                 <button class="btn" id="n=">=</button>
+                <button class="btn" id="C">C</button>
             </div>
         </div>
        </div>
     </main>
    
   
-    <script src="./script/index.js" ></script>
+    <script src="dist/bundle.js" ></script>
    
   
 </body>
